--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.top-gradient {
+    background-image: radial-gradient(circle at 50% 140vh, #a21caf,transparent 70%);
+}
+
 .hero-text {
     background: linear-gradient(135deg, #FFFFFF 50%, rgba(255, 255, 255, 0.38) 100%);
     -webkit-background-clip: text;
@@ -13,16 +17,16 @@
 .crescent {
     box-sizing: border-box;
 
-    width: 2400px;
+    width: 3000px;
     height: 1680px;
 
     background: #000000;
     border-top: 1px solid rgba(120, 119, 198, 0.4);
-    border-radius: 1020px;
+    border-radius: 500px;
 }
 
 .rotation-container {
-    -webkit-text-fill-color: aquamarine;
+    -webkit-text-fill-color: #e879f9;
     text-fill-color: unset;
     color:white;
     position: relative;
