--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@ body {
 .crescent {
     box-sizing: border-box;
 
-    width: 3000px;
+    width: 100%;
     height: 1680px;
 
     background: #000000;
