--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ body {
 }
 
 .top-gradient {
-    background-image: radial-gradient(circle at 50% -300vh, #a21caf,transparent 70%);
+    background-image: radial-gradient(circle at 50% -250vh, #a21caf,transparent 70%);
 }
 
 .hero-text {
@@ -26,12 +26,27 @@ body {
     height: 1680px;
 
     background: #000000;
-    border-radius: 500px;
+    border-top-left-radius: 125px;
+    border-top-right-radius: 125px;
     border-top: 1px solid transparent;
 
-    background-image: linear-gradient(black, black), linear-gradient(to right, transparent 10%,  rgba(120, 119, 198, 0.4), transparent);
+    background-image: linear-gradient(black, black), linear-gradient(to right, transparent -20%, rgba(240, 164, 255, 0.6) 70%, transparent);
     background-origin: border-box;
     background-clip: content-box, border-box;
+}
+
+@media (min-width: 640px) {
+    .crescent {
+        border-top-left-radius: 200px;
+        border-top-right-radius: 200px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .crescent {
+        border-top-left-radius: 500px;
+        border-top-right-radius: 500px;
+    }
 }
 
 .rotation-container {
