:lipstick: Update hero text colours

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ body {
 }
 
 .top-gradient {
-    background-image: radial-gradient(circle at 50% -250vh, #a21caf,transparent 70%);
+    background-image: radial-gradient(circle at 50% -250vh, #c026d3,transparent 70%);
 }
 
 .hero-text {
