🧮 Add snapping to each card

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,16 @@
 @tailwind utilities;
 
 /* Fix for overscroll color */
+html {
+    scroll-snap-type: y mandatory;
+}
+
 body {
     background: black;
+}
+
+.snap {
+    scroll-snap-align: center;
 }
 
 .top-gradient {
